# llm-mlops

./: README.md  pyproject.toml
llm_mlops/: llm_loader.py  main.py
llm_mlops/config/: llm_config.yaml
tests/: test_llm_loader.py
